Add client implementation for huma openapi-generator sdk
